<resources>
    <string name="app_name" translatable="false">evermind</string>
    <string name="general_preferences_id" translatable="false">com.ferllop.evermind.GENERAL_PREFERENCES</string>
    <string name="logged_user_data" translatable="false">com.ferllop.evermind.LOGGED_USER_DATA</string>
    <string name="USER_PREFIX" translatable="false">\@</string>
    <string name="action_settings">Settings</string>
    <string name="searchBarHint">search...</string>
    <string name="edit_button">Edit card</string>
    <string name="start_button">start</string>
    <string name="create_new_card">Create card</string>
    <string name="create_button">create</string>
    <string name="search_existing_cards">Search cards</string>
    <string name="search_button">search</string>
    <string name="cards_to_review">Today you have #qty card#s to review</string>
    <string name="error_empty_query_search">You must provide a not empty search</string>
    <string name="delete_button">delete</string>
    <string name="save_button">save</string>
    <string name="labels_editTextHint">labels...</string>
    <string name="answer_editText_hint">And here goes the answer</string>
    <string name="quesstion_editText_hint">Write the question here</string>
    <string name="error_searching_card">Error when searching</string>
    <string name="error_inserting_card">Error creating the card</string>
    <string name="error_loading_card">Error loading the card</string>
    <string name="error_loading_all_cards">Error loading all cards</string>
    <string name="error_searching_cards">Error while searching</string>
    <string name="error_updateing_card">Error updating the card</string>
    <string name="error_deleting_card">Error deleting the card</string>
    <string name="card_deleted">Card deleted</string>
    <string name="card_saved">Card saved successfully</string>
    <string name="subscribe_to_card">subscribe</string>
    <string name="subscribed">Subscribed to card</string>
    <string name="right">right</string>
    <string name="resolve">resolve</string>
    <string name="wrong">wrong</string>
    <string name="unsubscribe_to_card">Unsubscribe</string>
    <string name="unsubscribed_from_card">Unsubscribed from card</string>
    <string name="delete_dialog_confirm_title">Delete card</string>
    <string name="delete_dialog_confirm_message">Are you sure that you want to delete this card?\nIt will also disappear for all the users subscribed to.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="register_button">create account</string>
    <string name="register_name">Name</string>
    <string name="register_username">username</string>
    <string name="register_email">email</string>
    <string name="register_password">password</string>
    <string name="login_button">login</string>
    <string name="forgot_password">forgot your password?</string>
    <string name="or">or</string>
    <string name="register">register</string>
    <string name="weak_password">*weak password</string>
    <string name="must_verify_message">You must verify your email clicking into the link sent to the email that you provided</string>
    <string name="username_must_unique">The username that you provided already exists. Try with another one</string>
    <string name="email_must_unique">"The email that you provided already exist in our database. Try with another one"</string>
    <string name="password_not_valid">Your password is too much weak.\nIt must contain lowercase, uppercase and one symbol</string>
    <string name="register_verify_email_sent">We\'ve sent a verification email to the emil address that you have provided</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="register_repeat_password">Repeat password</string>
    <string name="passwords_not_equals">Passwords don\'t match</string>
    <string name="all_fields_mandatory">All fields are required</string>
    <string name="register_remember_verify_email_sent">This email is pending to be verified.\nYou should have received a verification email.</string>
    <string name="reset_password_sent">If this email is registered in our system, you should receive an email with a link to be able to reset your password</string>
    <string name="search_info_message">"
        You can search cards: \n
        - labeled with a specific tag: \n
        if in the search field you type \"culture-general\" you will find all the cards with the tag \"culture-general\".\n
        - tagged with all the tags in a list  tags in a comma-separated  separated by commas:\n
        if you write \"chemistry, biology\" you will find all the cards labeled with both tags.\n
        - by author, preceding the  author's name with an at sign \"@\":\n
        if you search for @super34 you will find all the cards  of the user super34.\n
        - by author and tags:\n
        if you type \"chemistry, @super34, biology\" you will find all the cards of user \"super34\" that are tagged with both \"biology\" and \"chemistry\"."</string>
    <string name="continue_button">continue</string>
    <string name="right_answers">Right answers</string>
    <string name="profile">Profile</string>
    <string name="my_cards">My cards</string>
    <string name="my_subscriptions">My subscriptions</string>
    <string name="logout">Logout</string>
    <string name="MyCards">My cards</string>
    <string name="search_screen_title">Search</string>
    <string name="my_cards_screen_title">My cards</string>
    <string name="my_subscriptions_screen_title">My subscriptions</string>
    <string name="home_screen_title">Home</string>
    <string name="create_card_screen_title">Create card</string>
    <string name="edit_card_screen_title">Edit card</string>
    <string name="search_help_icon_description">Explanation about the search system</string>
    <string name="search_button_description">Execute search</string>
    <string name="home">Home</string>
    <string name="profile_screen_title">profile</string>
    <string name="time_day_start">Time to start the day</string>
    <string name="settings_saved_properly">Setting saved properly</string>
    <string name="time_restriction">The day start time must be a number between 0 and 23</string>
    <string name="name_restriction">You must provide a name</string>
    <string name="subscribe_all">Subscribe to all</string>
    <string name="cards_found_quantity">#qty card#s found</string>
    <string name="no_cards_found">No cards found</string>
    <string name="subscribed_count_message">You are subscribed to #qty card#s</string>
    <string name="no_subscriptions_found">You aren\'t subscribed to any card.\nSearch by your interests!</string>
    <string name="created_cards_count_message">You\'ve created #qty card#s</string>
    <string name="no_created_cards_found">You have not created any card\nCreate you\'re first one!</string>
    <string name="subscribed_to_all">Subscribed to all cards</string>
    <string name="import_cards">Import</string>
    <string name="cards_imported">All cards imported</string>


</resources>