<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchCardsActivity">

    <EditText
        android:id="@+id/searchBar_textInput"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/searchBarHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/search_button"
        app:layout_constraintStart_toEndOf="@+id/search_info_button"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="42dp"
        android:layout_height="42dp"
        app:srcCompat="@drawable/ic_search"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/search_button_description" />


    <FrameLayout
        android:id="@+id/search_cards_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar_textInput" />

    <ImageButton
        android:id="@+id/search_info_button"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_info"
        android:contentDescription="@string/search_help_icon_description" />
</androidx.constraintlayout.widget.ConstraintLayout>